--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Open+Sans:wght@400;600;700&display=swap");
+@font-face {
+  font-family: 'Freshbot';
+  src: url(../fonts/FRESHBOT.TTF);
+}
 body {
   font-family: "Open Sans", sans-serif;
   color: #0c0c0c;
@@ -1017,7 +1021,7 @@ a:focus {
 .floating-parent .talk{
   width: 60px;
   height: 60px;
-  background: url(../images/gif.gif);
+  background: url(../images/chatbot1-removebg.png);
   border-radius: 50%;
   background-repeat: no-repeat;
   color: #00778b;
@@ -1035,6 +1039,7 @@ a:focus {
   top: 10px;
   white-space: nowrap;
   border: 0px;
+  font-family: 'Freshbot', 'Roboto';
   font-size: 18px;
   cursor: pointer;
   border-radius: 10px;
